@@ -29,6 +29,8 @@ export(emulate)
 export(eval_model)
 export(getImp)
 export(ggROC)
+export(imp)
+export(importance)
 export(impute)
 export(logistic)
 export(logistic_inv)
